Fix font icons on iOS 4. (cherry-picked from c196f0c)

--- a/styles/mobile/common.less
+++ b/styles/mobile/common.less
@@ -1437,8 +1437,7 @@
 /* Stretched View */
 
 .km-stretched-view  {
-    display: -webkit-box;
-    display: -webkit-flexbox;
+    .flexbox(box);
 }
 
 .km-stretched-view > * {
